Implement simple board

--- a/index.html
+++ b/index.html
@@ -8,7 +8,44 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
+    <div id="board">
+        <div class="row-wrapper">
+            <div id="field-1">
+                <button class="field-btn" data-field="1"></button>
+            </div>
+            <div id="field-2">
+                <button class="field-btn" data-field="2"></button>
+            </div>
+            <div id="field-3">
+                <button class="field-btn" data-field="3"></button>
+            </div>
+        </div>
+
+        <div class="row-wrapper">
+            <div id="field-4">
+                <button class="field-btn" data-field="4"></button>
+            </div>
+            <div id="field-5">
+                <button class="field-btn" data-field="5"></button>
+            </div>
+            <div id="field-6">
+                <button class="field-btn" data-field="6"></button>
+            </div>
+        </div>
+
+        <div class="row-wrapper">
+            <div id="field-7">
+                <button class="field-btn" data-field="7"></button>
+            </div>
+            <div id="field-8">
+                <button class="field-btn" data-field="8"></button>
+            </div>
+            <div id="field-9">
+                <button class="field-btn" data-field="9"></button>
+            </div>
+        </div>
+    </div>
+
     <script src="./js/script.js"></script>
 </body>
 </html>
