Restart game after win or tie

--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
             </div>
         </div>
     </div>
+    
+    <div id="game-info">
+        <p id="current-turn"></p>
+        <p id="current-player"></p>
+    </div>
 
     <script src="./js/script.js"></script>
 </body>
