Improve symbol animations + show message on game over

--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
         <p id="current-player"></p>
     </div>
 
+    <p id="end-game-message"></p>
+
     <script src="./js/script.js"></script>
 </body>
 </html>
